methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:8: error: not found: value set
      case 4 => color = Color.PINK; setX(0); set(5)
                                             ^